<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Stock Opname</string>
    <string name="login_title">STOCK OPNAME</string>
    <string name="login_subtitle">PT Unison Industrial Indonesia</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="btn_login">MASUK</string>
    <string name="warehouse_title">Pilih Lokasi Gudang</string>
    <string name="session_title">Sesi Aktif</string>
    <string name="remember_me">Ingat username saya</string>
    <string name="desc_logo">Logo PT Unison Industrial Indonesia</string>
    <string name="desc_toggle_password">Tampilkan atau sembunyikan password</string>
    <string name="desc_back">Kembali</string>
    <string name="desc_clear">Hapus pencarian</string>
</resources>